--- a/static/Index.html
+++ b/static/Index.html
@@ -49,7 +49,7 @@
 %if UserStatus == 0 or UserStatus == 1:
 
         <div class="button">
-            <a href="/">管理任务</a>
+            <a href="/modify_tasks">管理任务</a>
         </div>
 
         <div class="button">
@@ -62,6 +62,9 @@
 
         <div class="button">
             <a href="/admin">系统管理</a>
+        </div>
+        <div class="button">
+            <a href="/log">系统日志</a>
         </div>
 %endif
 
