初步增加单元测试

--- a/static/Index.html
+++ b/static/Index.html
@@ -49,7 +49,7 @@
 %if UserStatus == 0 or UserStatus == 1:
 
         <div class="button">
-            <a href="/modify_tasks">管理任务</a>
+            <a href="/modify_tasks">查看任务</a>
         </div>
 
         <div class="button">
