--- a/static/ModifyTasks.html
+++ b/static/ModifyTasks.html
@@ -27,7 +27,7 @@
 %elif task[2] == 2:
         <td>正在下载</td>
 %endif
-        <td>${task[3].decode('utf-8')}</td>
+        <td id="SavePos">${task[3].decode('utf-8')}</td>
         <td>${task[4].decode('utf-8')}</td>
         <td>${task[5].decode('utf-8')}</td>
         <td>${task[7].decode('utf-8')}</td>
