--- a/static/Index.html
+++ b/static/Index.html
@@ -20,6 +20,15 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/assets/ico/apple-touch-icon-57-precomposed.png">
     <script src="/assets/js/modernizr-2.6.2.min.js"></script>
+    <style>
+html,
+body {
+   position: relative;
+   background-color: #f2f0e4;
+   background: transparent url(/assets/img/bkg-4.png) repeat 0 0;
+   color: #847d6b;
+}
+    </style>
   </head>
   <body>
     <div class="container">
