--- a/static/ModifyRules.html
+++ b/static/ModifyRules.html
@@ -23,6 +23,15 @@
 
     <link rel="stylesheet" href="/static/jquery-ui.min.css">
     <script src="/static/jquery-ui.min.js"></script>
+    <style>
+html,
+body {
+   position: relative;
+   background-color: #f2f0e4;
+   background: transparent url(/assets/img/bkg-4.png) repeat 0 0;
+   color: #847d6b;
+}
+    </style>
 
   </head>
   <body>
