--- a/static/Notice.html
+++ b/static/Notice.html
@@ -56,7 +56,7 @@
     </div>
     <br><br>
     <div class="alert alert-block alert-error fade in">
-        <h3 class="alert-heading">错误</h3>
+        <h3 class="alert-heading">提示</h3>
         <p>${msg}</p>
         <p>
             <a class="btn btn-danger" href="${url}">返回</a>
