--- a/static/Log.html
+++ b/static/Log.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width">
 
-    <title>${SiteName}</title>
+    <title>系统日志</title>
 
     <meta name="robots" content="noindex, nofollow">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
@@ -34,61 +34,37 @@
 </head>
 <body>
 <div class="container">
-%if UserStatus == 0 or UserStatus == 1:
-    <div class="page-header">
-        <h1>
-            <div>
-                <span class="icon icon-user"></span>
-                <a href="/settings" style="color:white;">${UserName}</a>
-                <small>，欢迎回来~</small>
-            </div>
-        </h1>
-    </div>
-%elif UserStatus == 2:
-    <div class="alert alert-error">
-        <a href="/settings">${UserName}</a>，您的账户已经被封禁，请联系管理员进行处理！
-    </div>
-%elif UserStatus == -1:
-    <div class="alert alert-info">
-        如需增加任务请<a href="/login">登陆</a>您的帐号，或者点击<a href="/register">这里</a>进行注册。
-    </div>
-%endif
+    <div id="nav-bar">
+        <div class="row">
+            <div class="span9">
+                <div id="header-container">
+                    <a id="backbutton" class="win-backbutton" href="/"></a>
+                    <h5>下载器</h5>
 
-    <div class="metro">
-%if UserStatus == 0 or UserStatus == 1:
-        <a class="tile wide text" href="/modify_tasks">
-            <div class="text-header">查看任务</div>
-        </a>
-        <a class="tile wide text bg-color-purple" href="/modify_rules">
-            <div class="text-header">管理规则</div>
-        </a>
-        <a class="tile wide text bg-color-grayLight" href="/settings">
-            <div class="text-header">个人设置</div>
-        </a>
-
-%endif
-        <a class="tile wide text bg-color-orange" href="/faq">
-            <div class="text-header">常见问题</div>
-        </a>
-%if UserStatus == 0:
-        <a class="tile wide text bg-color-blueDark" href="/admin">
-            <div class="text-header">系统管理</div>
-        </a>
-        <a class="tile wide text bg-color-pink" href="/log">
-            <div class="text-header">系统日志</div>
-        </a>
-%endif
-        <a class="tile wide imagetext bg-color-greenDark" href="/logout">
-            <div class="image-wrapper">
-                <span class="icon icon-logout"></span>
+                    <div class="dropdown">
+                        <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
+                            系统日志
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/faq">常见问题</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="column-text">
-                <div class="text-header">注销登录</div>
-            </div>
-        </a>
+        </div>
     </div>
+    <br><br>
+    <div class="alert alert-block alert-success fade in">
+%for msg in msgs:
+        <p>${msg}</p>
+%endfor
+        <p>
+            <a class="btn btn-danger" href="/index">返回</a>
+        </p>
+    </div>
+
 </div>
-
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="static/assets/js/jquery-1.11.0.min.js"></script>
@@ -105,6 +81,8 @@
 <script type="text/javascript" src="static/assets/js/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="static/assets/js/holder.js"></script>
 <script type="text/javascript" src="static/assets/js/Chart.min.js"></script>
-
 </body>
+</html>
+</body>
+
 </html>
