--- a/static/ModifyRules.html
+++ b/static/ModifyRules.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>下载链接管理</title>
+    <title>任务定时规则</title>
+    <style>
+        html {
+            position: relative;
+            background-color: #f2f0e4;
+            background: transparent url(static/assets/img/bkg-win8.jpg) repeat 0 0;
+            color: white;
+        }
+    </style>
 </head>
 
 <link rel="stylesheet" href="/static/assets/js/jquery-ui.min.css">
@@ -25,11 +33,11 @@
             autoOpen: false,
             show: {
                 effect: "explode",
-                duration: 300
+                duration: 400
             },
             hide: {
                 effect: "explode",
-                duration: 300
+                duration: 500
             },
             buttons: {
                 "Ok": function() {
