--- a/static/ModifyTasks.html
+++ b/static/ModifyTasks.html
@@ -1,37 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width">
+<%include file="Header.html"/>
 
-    <title>任务管理</title>
-
-    <meta name="robots" content="noindex, nofollow">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro.css">
-    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro-responsive.css">
-    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro-icons.css">
-    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro-ui-light.css">
-    <link rel="stylesheet" type="text/css" href="static/assets/css/datepicker.css">
-    <link rel="shortcut icon" href="static/assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144"
-          href="static/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114"
-          href="static/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="static/assets/ico/apple-touch-icon-57-precomposed.png">
-    <script src="static/assets/js/modernizr-2.6.2.min.js"></script>
-    <style>
-        html,
-        body {
-            position: relative;
-            background-color: #f2f0e4;
-            background: transparent url(static/assets/img/bkg-win8.jpg) repeat 0 0;
-            color: white;
-        }
-    </style>
-</head>
 <body>
 <div class="container">
     <div id="nav-bar">
@@ -64,16 +32,16 @@
             </div>
         </div>
     </div>
-    <table class="table table-striped table-hover">
+    <table class="table table-bordered">
         <thead>
         <tr>
-            <td>下载链接</td>
-            <td>下载状态</td>
-            <td>保存位置</td>
-            <td>起始时间</td>
-            <td>结束时间</td>
-            <td>所在时区</td>
-            <td>重试次数</td>
+            <td><strong>下载链接</strong></td>
+            <td><strong>下载状态</strong></td>
+            <td><strong>保存位置</strong></td>
+            <td><strong>起始时间</strong></td>
+            <td><strong>结束时间</strong></td>
+            <td><strong>所在时区</strong></td>
+            <td><strong>重试次数</strong></td>
         </tr>
         </thead>
         <tbody>
