--- a/static/ModifyRules.html
+++ b/static/ModifyRules.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width">
+
     <title>任务定时规则</title>
     <style>
         html {
