--- a/static/Register.html
+++ b/static/Register.html
@@ -93,21 +93,8 @@
     </form>
 </div>
 
-<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-<script src="static/assets/js/jquery-1.11.0.min.js"></script>
-<script>window.jQuery || document.write(String.fromCharCode(60) + "script src='static/assets/js/jquery-1.11.0.min.js'>\x3C/script>")</script>
-<!--[if IE 7]>
-<script type="text/javascript" src="scripts/bootmetro-icons-ie7.js"></script>
-<![endif]-->
+<%include file="Footer.html"/>
 
-<script type="text/javascript" src="static/assets/js/google-code-prettify/prettify.js"></script>
-<script type="text/javascript" src="static/assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="static/assets/js/bootmetro-panorama.js"></script>
-<script type="text/javascript" src="static/assets/js/bootmetro-pivot.js"></script>
-<script type="text/javascript" src="static/assets/js/bootmetro-charms.js"></script>
-<script type="text/javascript" src="static/assets/js/bootstrap-datepicker.js"></script>
-<script type="text/javascript" src="static/assets/js/holder.js"></script>
-<script type="text/javascript" src="static/assets/js/Chart.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         $("form").submit(function (e) {
